# iris

./: .gitignore  .gitmodules  AppImage.cmake  CMakeLists.txt  Info.plist  LICENSE  Makefile  Makefile.linux  Makefile.macos  MoltenVK_icd.json  README.md  build-clean.ps1  build-deps.ps1  build-win.ps1  build.sh  compat.txt  fmt.txt  imgui.ini  main.cpp  main2.cpp  r27v1602f.7d  r27v1602f.8g  r5900.txt  setup_gl3w.sh  t  t.cpp
.github/: app-bundle.sh
.github/workflows/: linux.yml  macos.yml  release.yml  ubuntu.yml  windows.yml
frontend/: arcade.hpp  audio.cpp  config.hpp  elf.cpp  elf.hpp  emu.cpp  handlers.cpp  imgui.cpp  input.cpp  instance.cpp  instance.hpp  iris.cpp  iris.hpp  notifications.cpp  platform.hpp  render.cpp  settings.cpp  shaders.cpp  vulkan.cpp
frontend/platform/: stub.cpp  windows.cpp
frontend/renderer/: opengl.cpp  opengl.hpp  software.cpp  software.hpp
frontend/ui/: about.cpp  bios_setting.cpp  breakpoints.cpp  control.cpp  dma.cpp  gs.cpp  intc.cpp  logs.cpp  memory.cpp  memory_card_tool.cpp  memory_search.cpp  memory_viewer.h  menubar.cpp  modules.cpp  overlay.cpp  pad.cpp  settings.cpp  spu2.cpp  state.cpp  statusbar.cpp  symbols.cpp  threads.cpp  timers.cpp  vu_disassembly.cpp
res/: icon.rc  icon.res  iris.icns  iris.rc  iris.res
shaders/: curvature.frag  curvature.spv  decoder.frag  decoder.spv  default.frag  default.vert  encoder.frag  encoder.spv  flip.frag  fragment.glsl  fragment.msl  fragment.spv  noise.frag  noise.spv  ntsc.spv  scanlines.frag  shader.spv  shader.vert  sharpen.frag  sharpen.spv  smooth.frag  vertex.glsl  vertex.msl  vertex.spv
src/: bios.c  bus.c  bus.h  ee.c  ee.h  md5.c  md5.h  ps2.c  ps2.h  ps2_elf.c  ps2_elf.h  ps2_iso9660.c  ps2_iso9660.h  queue.c  queue.h  ram.c  rom.c  rom.h  sched.c  sched.h  scheduler.c  scheduler.h  u128.h
src/dev/: ds.c  ds.h  guncon.c  guncon.h  mc.h  mcd.c  mcd.h  mtap.c  mtap.h  ps1_mcd.c  ps1_mcd.h
src/ee/: bus.c  bus.h  bus_decl.h  dmac.c  dmac.h  ee.c  ee.h  ee_cached.cpp  ee_def.hpp  ee_dis.c  ee_dis.h  ee_jit.cpp  ee_uncached.c  ee_uncached.h  gif.c  gif.h  gs.c  gs.h  gs_opengl.c  gs_opengl.h  gs_software.c  gs_software.h  intc.c  intc.h  syscall.h  timers.c  timers.h  vif.c  vif.h  vu.c  vu.h  vu_cached.cpp  vu_def.hpp  vu_dis.c  vu_dis.h  vu_uncached.c
src/ee/renderer/: opengl.cpp  opengl.hpp  software.cpp  software.hpp
src/gs/: gs.c  gs.h
src/gs/renderer/: config.hpp  hardware.cpp  hardware.hpp  null.cpp  null.hpp  renderer.cpp  renderer.hpp  software.cpp  software.hpp  software_thread.cpp  software_thread.hpp
src/iop/: bus.c  bus.h  bus_decl.h  cdvd.c  cdvd.h  disc.c  disc.h  dma.c  dma.h  fw.c  fw.h  intc.c  intc.h  iop.c  iop.h  iop_cached.cpp  iop_def.hpp  iop_dis.c  iop_dis.h  iop_export.c  iop_export.cpp  iop_export.h  rpc.c  rpc.h  sio2.c  sio2.h  spu2.c  spu2.h  timers.c  timers.h  usb.c  usb.h
src/iop/disc/: bin.c  bin.h  chd.c  chd.h  ciso.c  ciso.h  cue.c  cue.h  iso.c  iso.h
src/iop/hle/: ioman.cpp  ioman.h  loadcore.c  loadcore.cpp  loadcore.h  sysmem.c  sysmem.cpp  sysmem.h
src/ipu/: dct_coeff.cpp  dct_coeff_table0.cpp  dct_coeff_table1.cpp  ipu.cpp  ipu.h  ipu.hpp  ipu_fifo.cpp  ipu_fifo.hpp  vlc_table.cpp
src/s14x/: aiboard.c  aiboard.h  ioboard.c  ioboard.h  link.c  link.h  nand.c  nand.h  sram.c  sram.h  syscon.c  syscon.h
src/shared/: bios.c  bios.h  dev9.c  dev9.h  ram.c  ram.h  sbus.c  sbus.h  sif.c  sif.h  speed.c  speed.h
src/shared/speed/: ata.c  ata.h  eeprom.c  eeprom.h  flash.c  flash.h  isif.txt
